syntax = "proto3";
package com.github.thinkerou;
option java_multiple_files = true;

message StockQuote {
  double price = 1;
  int32 offer_number = 2;
  string description = 3;
}
