syntax = "proto3";
package com.github.thinkerou;
option java_multiple_files = true;

import "stockquotes.proto";

service StockQuoteProvider {

  rpc unaryGetStockQuote(Stock) returns (StockQuote) {}

  rpc serverSideStreamingGetListStockQuotes(Stock) returns (stream StockQuote) {}

  rpc clientSideStreamingGetStatisticsOfStocks(stream Stock) returns (StockQuote) {}

  rpc bidirectionalStreamingGetListsStockQuotes(stream Stock) returns (stream StockQuote) {}
}
message Stock {
  string ticker_symbol = 1;
  string company_name = 2;
  string description = 3;
}
